; ModuleID = '/home/carl/AnghaBench/linux/drivers/clocksource/extr_timer-davinci.c_davinci_timer_irq_timer.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clocksource/extr_timer-davinci.c_davinci_timer_irq_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.davinci_clockevent = type { %struct.TYPE_3__, i32 }
%struct.TYPE_3__ = type { i32 (%struct.TYPE_3__*)* }

@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @davinci_timer_irq_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @davinci_timer_irq_timer(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.davinci_clockevent*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.davinci_clockevent*
  store %struct.davinci_clockevent* %7, %struct.davinci_clockevent** %5, align 8
  %8 = load %struct.davinci_clockevent*, %struct.davinci_clockevent** %5, align 8
  %9 = getelementptr inbounds %struct.davinci_clockevent, %struct.davinci_clockevent* %8, i32 0, i32 0
  %10 = call i32 @clockevent_state_oneshot(%struct.TYPE_3__* %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %17, label %12

12:                                               ; preds = %2
  %13 = load %struct.davinci_clockevent*, %struct.davinci_clockevent** %5, align 8
  %14 = getelementptr inbounds %struct.davinci_clockevent, %struct.davinci_clockevent* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = call i32 @davinci_tim12_shutdown(i32 %15)
  br label %17

17:                                               ; preds = %12, %2
  %18 = load %struct.davinci_clockevent*, %struct.davinci_clockevent** %5, align 8
  %19 = getelementptr inbounds %struct.davinci_clockevent, %struct.davinci_clockevent* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i32 (%struct.TYPE_3__*)*, i32 (%struct.TYPE_3__*)** %20, align 8
  %22 = load %struct.davinci_clockevent*, %struct.davinci_clockevent** %5, align 8
  %23 = getelementptr inbounds %struct.davinci_clockevent, %struct.davinci_clockevent* %22, i32 0, i32 0
  %24 = call i32 %21(%struct.TYPE_3__* %23)
  %25 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %25
}

declare dso_local i32 @clockevent_state_oneshot(%struct.TYPE_3__*) #1

declare dso_local i32 @davinci_tim12_shutdown(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
